--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
@@ -20,8 +21,8 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animated-nav-tab-bar": "^3.1.8",
+    "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-gesture-handler": "~2.2.1",
-    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
