--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
+    "react-custom-flag-select": "^3.0.7",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animated-nav-tab-bar": "^3.1.8",
     "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-flags": "^1.0.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
+    "rn-country-dropdown-picker": "^2.1.8",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
